lab9/tests/good/array_param.al
// words

int A[100];

int f(int x, int y[])
begin
end

int main(int x)
begin
  f(x, A);
end