lab9/tests/bad/assign_int_to_void.al
int x;

int main(void)
begin
   void y, z;

   x = y + x;
end